k8s/worker-cluster-ip.yml
apiVersion: v1
kind: Service
metadata:
  name: worker-cluster-ip
spec:
  type: ClusterIP
  selector:
    component: worker
  ports:
    - port: 5000
      targetPort: 5000
