k8s/ingress-service.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations: 
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    certmanager.k8s.io/cluster-issuer: 'letsencrypt-prod'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  tls:
    - hosts:
        - "domain-name.com"
        - "www.domain-name.com"
      secretName: "domain-name.com"
  rules:
    - host: "domain-name.com"
      http:
        paths:
          - path: /
            backend:
              serviceName: worker-cluster-ip
              servicePort: 5000
    - host: "www.domain-name.com"
      http:
        paths:
          - path: /
            backend:
              serviceName: worker-cluster-ip
              servicePort: 5000
